src/styles/index.css
/* custom vars */
:root {
    --dark: #000000;
    --medium: #151515;
    --light: #ABA6AB;
    --accent: #ED3976;
    --nav-height: 10vh;
    --gap: 0.5rem;
    --half-gap: calc(var(--gap) * 1.5);
    --2-gap: calc(var(--gap) * 2);
    --3-gap: calc(var(--gap) * 3);
    --6-gap: calc(var(--gap) * 6);
    --reg: 20pt;
    --xsmall: calc(var(--reg) * 0.75);
    --small: calc(var(--reg) * 0.85);
    --large: calc(var(--reg) * 1.25);
    --xlarge: calc(var(--reg) * 2.5);
}

/* typo */

body  {
    font-family: Helvetica, Arial, sans-serif;
    font-size: var(--reg);
}

.intro {
    font-size: var(--xlarge);
}

.project-title {
    font-size: var(--large);
}

.project-links a,
.details span {
    font-size: var(--small);
}

.details p {
    font-size: var(--xsmall);
}

/* colors & decorations */

* {
    color: var(--light);
}

body {
    background-color: var(--dark);
}

nav,
article {
    background-color: var(--medium);
}

nav {
    border-bottom: 2px solid var(--dark);
}

article,
.project-links a {
    border-radius: var(--gap);
}

a:hover,
a:active,
.selected,
.contact-links a:hover span,
.contact-links a:active span {
    color: var(--accent);
}

.project-links a {
    background-color: var(--accent);
    color: var(--dark);
}

.intro span {
    color: var(--accent);
}

li {
    list-style-type: none;
}

/* display */

main {
    padding: 0 var(--3-gap);
}

section,
nav,
ul,
.contact-links,
.details,
.project-links {
    display: flex;
}

article {
    display: grid;
}

.contact-links img {
    display: block;
}

/* layout */

section,
ul {
    width: 80vw;
    margin: 0 auto;
}

nav {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
    min-height: var(--nav-height);
    height: auto;
    width: 100vw;
    padding: var(--3-gap);
    align-items: center;
}

ul {
    flex-wrap: wrap;
    justify-content: space-around;
    align-content: center;
}

section {
    flex-flow: column;
    justify-content: center;
    align-items: start;
    height: 100vh;
    min-height: max-content; /* FIX: min-height receeds past content */
    padding-top: var(--nav-height);
}

#projects {
    justify-content: start;
    padding-top: calc(var(--nav-height) + var(--6-gap));
}

article {
    grid-template-rows: repeat(4, auto);
    width: 100%;
}

.details {
    flex-flow: column;
}

#skills,
.contact-links {
    flex-flow: row wrap;
}

#skills {
    align-content: center;
}

figcaption {
    width: max-content;
    margin: 0 auto;
}

#contact {
    align-items: center;
}

.contact-links {
    justify-content: center;
}

.contact-links img,
.contact-links span {
    margin: 0 auto;
}

/* spacing */

#projects {
    row-gap: var(--6-gap);
}

#home,
#contact {
    gap: var(--3-gap);
}

#about,
.details {
    gap: var(--2-gap);
}

article {
    padding: var(--half-gap);
    gap: var(--half-gap);
}

.project-links a {
    padding: var(--half-gap) var(--3-gap);
}

ul,
#skills,
.contact-links,
.project-links {
    gap: var(--gap);
}

/* sizing */

#skills img {
    height: 5em;
    width: auto;
}

#contact img {
    height: 2.5em;
    width: auto;
}

